fix linting errors

--- a/docs/content/getting-started/index.mdx
+++ b/docs/content/getting-started/index.mdx
@@ -47,12 +47,10 @@ Components can be imported into any React-based application.
 
 E.g.
 
+```js
+import {Hero} from '@primer/react-brand'
+```
+
 ```jsx
-import {Hero} from "@primer/react-brand"
-
-...
-
-
 <Hero {...props} />
-
 ```
