apply PR feedback

--- a/docs/content/getting-started/index.mdx
+++ b/docs/content/getting-started/index.mdx
@@ -7,10 +7,10 @@ Primer React Brand is [open-sourced on GitHub](https://github.com/primer/react-b
 
 ### 1. Install Primer React Brand
 
-We recommend installing Primer React Brand as a dependency of your project.
+Install Primer React Brand with [npm](https://www.npmjs.com/).
 
 ```shell
-npm install @primer/react-brand --save
+npm install @primer/react-brand
 ```
 
 ### 2. Import global stylesheets
