fix broken homepage links

--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -30,10 +30,10 @@ import {Link} from 'gatsby'
       columnGap: '0.75rem',
     }}
   >
-    <LinkButton href="/getting-started" variant="outline">
+    <LinkButton href="/react-brand/getting-started" variant="outline">
       Installation instructions
     </LinkButton>
-    <LinkButton href="/storybook" variant="outline" target="_blank">
+    <LinkButton href="/react-brand/storybook" variant="outline" target="_blank">
       Storybook
     </LinkButton>
     <LinkButton
