make docs for text more consistent

--- a/docs/content/components/Text.mdx
+++ b/docs/content/components/Text.mdx
@@ -29,7 +29,7 @@ import {Text} from '@primer/react-brand'
 <Container pl={3}>
   {TextSizes.map((size) => (
     <Text key={size} size={size} as="p">
-      {size}. With GitHub Copilot, you’re always in charge.
+      Text {size}
     </Text>
   ))}
 </Container>
