--- a/docs/content/getting-started/index.mdx
+++ b/docs/content/getting-started/index.mdx
@@ -22,7 +22,6 @@ Primer React Brand requires a global stylesheet loaded ahead-of-time.
 Import the stylesheet at the earliest React-rendering opportunity:
 
 ```js
-import '@primer/react-brand/lib/css/gh-variables.color.css'
 import '@primer/react-brand/lib/css/main.css'
 ```
 
@@ -30,15 +29,11 @@ or
 
 #### b. Using a static stylesheet
 
-Use a static stylesheet if you're unable to load in global styles using a bundler
+Load the static stylesheet if you're unable to import stylesheets using a bundler
 
 ```html
 <link
   href="https://unpkg.com/browse/@primer/react-brand@<version>/lib/css/main.css"
-  rel="stylesheet"
-/>
-<link
-  href="https://unpkg.com/browse/@primer/react-brand@<version>/lib/css/gh-variables.color.css"
   rel="stylesheet"
 />
 ```
