--- a/docs/content/getting-started/index.mdx
+++ b/docs/content/getting-started/index.mdx
@@ -15,11 +15,11 @@ npm install @primer/react-brand
 
 ### 2. Import global stylesheets
 
-Primer React Brand requires a global stylesheet loaded ahead-of-time.
+Primer React Brand requires a global stylesheet to be loaded ahead-of-time.
 
 #### a. Using an application bundler (e.g. Webpack)
 
-Import the stylesheet at the earliest React-rendering opportunity:
+Import the `main` stylesheet at the earliest rendering opportunity:
 
 ```js
 import '@primer/react-brand/lib/css/main.css'
@@ -38,7 +38,24 @@ Load the static stylesheet if you're unable to import stylesheets using a bundle
 />
 ```
 
-### 3. Import components
+### 3. (Optional) Import the custom font assets
+
+Primer Brand references the `Mona Sans` typeface, which will need to be loaded alongside the main stylesheet.
+
+```js
+import '@primer/react-brand/fonts/fonts.css'
+```
+
+or
+
+```html
+<link
+  href="https://unpkg.com/browse/@primer/react-brand@<version>/fonts/fonts.css"
+  rel="stylesheet"
+/>
+```
+
+### 4. Import components
 
 Components can be imported into any React-based application.
 
