--- a/docs/content/components/Heading.mdx
+++ b/docs/content/components/Heading.mdx
@@ -9,8 +9,8 @@ description: Use the Heading component to render body content
 import {
   HeadingSizes,
   HeadingTags,
-  DefaultHeadingTag,
-  DefaultHeadingSize,
+  defaultHeadingTag,
+  defaultHeadingSize,
 } from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../src/components'
@@ -59,5 +59,5 @@ The `Heading` component can render as a `h1`, `h2`, `h3`, `h4`, `h5` or `h6` HTM
 
 | Name   | Type                                                    |                      Default                      | Description                         |
 | :----- | :------------------------------------------------------ | :-----------------------------------------------: | :---------------------------------- |
-| `as`   | <PropTableValues values={HeadingTags} addLineBreaks />  | <PropTableValues values={[DefaultHeadingTag]} />  | Applies the underlying HTML element |
-| `size` | <PropTableValues values={HeadingSizes} addLineBreaks /> | <PropTableValues values={[DefaultHeadingSize]} /> | Specify the heading size            |
+| `as`   | <PropTableValues values={HeadingTags} addLineBreaks />  | <PropTableValues values={[defaultHeadingTag]} />  | Applies the underlying HTML element |
+| `size` | <PropTableValues values={HeadingSizes} addLineBreaks /> | <PropTableValues values={[defaultHeadingSize]} /> | Specify the heading size            |
