fix muted hero description

--- a/docs/content/components/Hero.mdx
+++ b/docs/content/components/Hero.mdx
@@ -11,6 +11,8 @@ import {Hero} from '@primer/react-brand'
 
 ## Examples
 
+### Default
+
 ```jsx live
 <Hero
   heading="This is my super sweet hero heading"
@@ -24,5 +26,43 @@ import {Hero} from '@primer/react-brand'
     href: '#',
   }}
   align="center"
+/>
+```
+
+### Size variants
+
+`Hero` supports an optional `small` size variant.
+
+```jsx live
+<Hero
+  heading="This is my super sweet hero heading"
+  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus elementum."
+  primaryAction={{
+    text: 'Primary action',
+    href: '#',
+  }}
+  align="center"
+  size="small"
+/>
+```
+
+### Alignment
+
+`Hero` text alignment can be adjusted by changing the `align` prop.
+
+```jsx live
+<Hero
+  heading={
+    <>
+      Blazing fast cloud
+      <br />
+      developer environments
+    </>
+  }
+  description="Visual Studio Code backed by high performance VMs that start in seconds."
+  primaryAction={{
+    text: 'Primary action',
+    href: '#',
+  }}
 />
 ```
