--- a/docs/content/components/Text.mdx
+++ b/docs/content/components/Text.mdx
@@ -9,6 +9,8 @@ description: Use the Text component to render body content
 import {
   TextSizes,
   TextTags,
+  TextVariants,
+  defaultTextVariant,
   defaultTextTag,
   defaultTextSize,
 } from '@primer/react-brand'
@@ -41,6 +43,17 @@ import {Text} from '@primer/react-brand'
 </Container>
 ```
 
+### Variants
+
+```jsx live
+<Container pl={3}>
+  <Text as="p">With GitHub Copilot, you’re always in charge.</Text>
+  <Text as="p" variant="muted">
+    With GitHub Copilot, you’re always in charge.
+  </Text>
+</Container>
+```
+
 ### Polymorphism
 
 The `Text` component can render as a `span`, `p` or `div` HTML element.
@@ -55,7 +68,8 @@ The `Text` component can render as a `span`, `p` or `div` HTML element.
 
 ### Text
 
-| Name   | Type                                                 |                    Default                     | Description                         |
-| :----- | :--------------------------------------------------- | :--------------------------------------------: | :---------------------------------- |
-| `as`   | <PropTableValues values={TextTags} addLineBreaks />  | <PropTableValues values={[defaultTextTag]} />  | Applies the underlying HTML element |
-| `size` | <PropTableValues values={TextSizes} addLineBreaks /> | <PropTableValues values={[defaultTextSize]} /> | Specify the text size               |
+| Name      | Type                                                    |                      Default                      | Description                         |
+| :-------- | :------------------------------------------------------ | :-----------------------------------------------: | :---------------------------------- |
+| `as`      | <PropTableValues values={TextTags} addLineBreaks />     |   <PropTableValues values={[defaultTextTag]} />   | Applies the underlying HTML element |
+| `size`    | <PropTableValues values={TextSizes} addLineBreaks />    |  <PropTableValues values={[defaultTextSize]} />   | Specify the text size               |
+| `variant` | <PropTableValues values={TextVariants} addLineBreaks /> | <PropTableValues values={[defaultTextVariant]} /> | Specify alternative text appearance |
