added a css reset

--- a/docs/content/components/Heading.mdx
+++ b/docs/content/components/Heading.mdx
@@ -25,7 +25,7 @@ import {Heading} from '@primer/react-brand'
 
 ```jsx live
 <Container pl={3}>
-  <Heading>Resources to help enterprise teams do their best work</Heading>
+  <Heading>This is my super sweet heading</Heading>
 </Container>
 ```
 
@@ -47,9 +47,7 @@ The `Heading` component can render as a `h1`, `h2`, `h3`, `h4`, `h5` or `h6` HTM
 
 ```jsx live
 <Container pl={3}>
-  <Heading as="h3">
-    Resources to help enterprise teams do their best work
-  </Heading>
+  <Heading as="h3">This is my super sweet heading</Heading>
 </Container>
 ```
 
