add theme picker to color docs

--- a/docs/content/primitives/color.mdx
+++ b/docs/content/primitives/color.mdx
@@ -5,7 +5,14 @@ status: Experimental
 
 import {HeadingTags, defaultHeadingTag} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
+import {ColorThemePicker} from '../../src/components/content/ColorThemePicker'
 import {ColorScales} from '../../src/components'
+
+## Themes
+
+<ColorThemePicker />
+
+## Scales
 
 <Note variant="warning">
   Avoid referencing scale variables directly when building UI that needs to
@@ -13,4 +20,5 @@ import {ColorScales} from '../../src/components'
   rare cases, you may need to use scale variables to define custom functional
   variables in your application.
 </Note>
+
 <ColorScales />
