--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -29,10 +29,30 @@ import {River} from '@primer/react-brand'
       a pull request.
     </Text>
     <LinkButton>Learn more</LinkButton>
+  </River.Content>
+</River>
+```
+
+### With a quote
+
+```jsx live
+<River>
+  <River.Visual>
+    Bring your own component (BYOC) <img> or ReactNode (E.g. Next.js <Image />)
+  </River.Visual>
+  <River.Content>
+    <Heading>Collaboration that goes beyond code</Heading>
+    <Text as="p">
+      Build your business fast with access to the world’s largest open source
+      registry. Host it in the cloud with unlimited free public and private
+      repositories. Start conversations, propose changes, and get feedback with
+      a pull request.
+    </Text>
     <River.Quote
       by="Developer Advocate // Stripe"
-      body="There is a huge open source community of code and developers to work with and draw inspiration from on GitHub."
-    />
+     >
+     There is a huge open source community of code and developers to work with and draw inspiration from on GitHub.
+    </River.Quote>
   </River.Content>
 </River>
 ```
@@ -61,7 +81,7 @@ import {River} from '@primer/react-brand'
 
 ### River.Quote
 
-| Name                           | Type     | Default | Description   |
-| :----------------------------- | :------- | :-----: | :------------ |
-| `by` <Label>Required</Label>   | `string` |         | Quote from    |
-| `body` <Label>Required</Label> | `string` |         | Quote content |
+| Name                               | Type     | Default | Description   |
+| :--------------------------------- | :------- | :-----: | :------------ |
+| `by` <Label>Required</Label>       | `string` |         | Quote from    |
+| `children` <Label>Required</Label> | `string` |         | Quote content |
