change alignment to align

--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -63,7 +63,7 @@ import {River} from '@primer/react-brand'
 
 | Name         | Type                            |   Default   | Description                                                                |
 | :----------- | :------------------------------ | :---------: | :------------------------------------------------------------------------- |
-| `alignment`  | `'left'`, `'right'`, `'center'` |  `'left'`   | Alignment of text content relative to the Visual position                  |
+| `align`      | `'left'`, `'right'`, `'center'` |  `'left'`   | Alignment of text content relative to the Visual position                  |
 | `imageRatio` | `'50/50'`, `'60/40'`            |  `'60/40'`  | The aspect ratio applied to the image. Affects overall layout proportions. |
 | `as`         | `'section'`, `'div' `           | `'section'` | HTML tag to be used in the parent element                                  |
 
