address PR feedback

--- a/docs/content/components/Text.mdx
+++ b/docs/content/components/Text.mdx
@@ -48,7 +48,7 @@ import {Text} from '@primer/react-brand'
 ```jsx live
 <Container pl={3}>
   <Text as="p">With GitHub Copilot, you’re always in charge.</Text>
-  <Text as="p" variant="muted">
+  <Text as="p" variant="secondary">
     With GitHub Copilot, you’re always in charge.
   </Text>
 </Container>
