--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -18,7 +18,7 @@ import {River} from '@primer/react-brand'
 ```jsx live
 <River>
   <River.Visual>
-    Bring your own component (BYOC) <img> or ReactNode (E.g. Next.js <Image />)
+    Bring your own component (BYOC) img or ReactNode (E.g. Next.js img)
   </River.Visual>
   <River.Content>
     <Heading>Collaboration that goes beyond code</Heading>
