fix docs and upgrade doctocat

--- a/docs/content/components/Heading.mdx
+++ b/docs/content/components/Heading.mdx
@@ -2,7 +2,7 @@
 title: Heading
 status: Experimental
 source: https://github.com/primer/react-brand/tree/main/src/Heading/Heading.tsx
-storybook: '/react-brand/storybook?path=/story/components-hero--centered'
+storybook: '/react-brand/storybook/?path=/story/components-heading--default'
 description: Use the Heading component to render body content
 ---
 
