--- a/docs/content/components/Hero.mdx
+++ b/docs/content/components/Hero.mdx
@@ -2,6 +2,7 @@
 title: Hero
 status: Experimental
 source: https://github.com/primer/react-brand/tree/main/src/Hero/Hero.tsx
+storybook: '/react-brand/storybook/?path=/story/components-hero--default'
 description: Use the Hero component to render a full-width banner on a webpage
 ---
 
