--- a/docs/content/components/Text.mdx
+++ b/docs/content/components/Text.mdx
@@ -2,7 +2,7 @@
 title: Text
 status: Experimental
 source: https://github.com/primer/react-brand/tree/main/src/Text/Text.tsx
-storybook: '/react-brand/storybook?path=/story/components-text--scale'
+storybook: '/react-brand/storybook/?path=/story/components-text--scale'
 description: Use the Text component to render body content
 ---
 
